Enhance data fetching and relationships in entities and repositories