@@ -1,31 +1,26 @@
 package com.udacity.jdnd.course3.critter;
 
-import static org.assertj.core.api.Assertions.assertThat;
 
-import com.udacity.jdnd.course3.critter.pet.PetController;
-import com.udacity.jdnd.course3.critter.pet.PetDTO;
-import com.udacity.jdnd.course3.critter.pet.PetType;
-import com.udacity.jdnd.course3.critter.schedule.ScheduleController;
-import com.udacity.jdnd.course3.critter.schedule.ScheduleDTO;
+import com.udacity.jdnd.course3.critter.pet.*;
+import com.udacity.jdnd.course3.critter.schedule.*;
 import com.udacity.jdnd.course3.critter.user.*;
-import java.util.*;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.transaction.annotation.Transactional;
+import org.junit.jupiter.api.*;
+import org.springframework.beans.factory.annotation.*;
+import org.springframework.boot.test.context.*;
+import org.springframework.transaction.annotation.*;
 
-import java.time.DayOfWeek;
-import java.time.LocalDate;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.time.*;
+import java.util.*;
+import java.util.stream.*;
+
+import static org.assertj.core.api.Assertions.*;
+
 
 /**
- * This is a set of functional tests to validate the basic capabilities desired for this application.
- * Students will need to configure the application to run these tests by adding application.properties file
- * to the test/resources directory that specifies the datasource. It can run using an in-memory H2 instance
+ * This is a set of functional tests to validate the basic capabilities desired for this application. Students will need to configure the application to run
+ * these tests by adding application.properties file to the test/resources directory that specifies the datasource. It can run using an in-memory H2 instance
  * and should not try to re-use the same datasource used by the rest of the app.
- *
+ * <p>
  * These tests should all pass once the project is complete.
  */
 @Transactional
@@ -42,17 +37,18 @@ class CritterFunctionalTest {
     private ScheduleController scheduleController;
 
     @Test
-    void testCreateCustomer(){
+    void testCreateCustomer() {
         CustomerDTO customerDTO = createCustomerDTO();
         CustomerDTO newCustomer = userController.saveCustomer(customerDTO);
-        CustomerDTO retrievedCustomer = userController.getAllCustomers().getFirst();
+        CustomerDTO retrievedCustomer = userController.getAllCustomers()
+                                                      .getFirst();
         Assertions.assertEquals(newCustomer.getName(), customerDTO.getName());
         Assertions.assertEquals(newCustomer.getId(), retrievedCustomer.getId());
-        assertThat(retrievedCustomer.getPetIds()).isInstanceOf(UUID.class);
+        assertThat(retrievedCustomer.getPetIds()).isInstanceOf(List.class);
     }
 
     @Test
-    void testCreateEmployee(){
+    void testCreateEmployee() {
         EmployeeDTO employeeDTO = createEmployeeDTO();
         EmployeeDTO newEmployee = userController.saveEmployee(employeeDTO);
         EmployeeDTO retrievedEmployee = userController.getEmployee(newEmployee.getId());
@@ -77,13 +73,18 @@ class CritterFunctionalTest {
 
         //make sure you can retrieve pets by owner
         List<PetDTO> pets = petController.getPetsByOwner(newCustomer.getId());
-        Assertions.assertEquals(newPet.getId(), pets.getFirst().getId());
-        Assertions.assertEquals(newPet.getName(), pets.getFirst().getName());
+        Assertions.assertEquals(newPet.getId(), pets.getFirst()
+                                                    .getId());
+        Assertions.assertEquals(newPet.getName(), pets.getFirst()
+                                                      .getName());
 
         //check to make sure customer now also contains pet
-        CustomerDTO retrievedCustomer = userController.getAllCustomers().getFirst();
-        Assertions.assertTrue(retrievedCustomer.getPetIds() != null && retrievedCustomer.getPetIds().size() > 0);
-        Assertions.assertEquals(retrievedCustomer.getPetIds().get(0), retrievedPet.getId());
+        CustomerDTO retrievedCustomer = userController.getAllCustomers()
+                                                      .getFirst();
+        Assertions.assertTrue(retrievedCustomer.getPetIds() != null && !retrievedCustomer.getPetIds()
+                                                                                         .isEmpty());
+        Assertions.assertEquals(retrievedCustomer.getPetIds()
+                                                 .getFirst(), retrievedPet.getId());
     }
 
     @Test
@@ -100,8 +101,10 @@ class CritterFunctionalTest {
 
         List<PetDTO> pets = petController.getPetsByOwner(newCustomer.getId());
         Assertions.assertEquals(pets.size(), 2);
-        Assertions.assertEquals(pets.get(0).getOwnerId(), newCustomer.getId());
-        Assertions.assertEquals(pets.get(0).getId(), newPet.getId());
+        Assertions.assertEquals(pets.get(0)
+                                    .getOwnerId(), newCustomer.getId());
+        Assertions.assertEquals(pets.get(0)
+                                    .getId(), newPet.getId());
     }
 
     @Test
@@ -115,7 +118,7 @@ class CritterFunctionalTest {
 
         CustomerDTO owner = userController.getOwnerByPet(newPet.getId());
         Assertions.assertEquals(owner.getId(), newCustomer.getId());
-        Assertions.assertEquals(owner.getPetIds().get(0), newPet.getId());
+        Assertions.assertEquals(owner.getPetIds().getFirst(), newPet.getId());
     }
 
     @Test
@@ -154,7 +157,10 @@ class CritterFunctionalTest {
         er1.setDate(LocalDate.of(2019, 12, 25)); //wednesday
         er1.setSkills(Set.of(EmployeeSkill.PETTING));
 
-        Set<UUID> eIds1 = userController.findEmployeesForService(er1).stream().map(EmployeeDTO::getId).collect(Collectors.toSet());
+        Set<UUID> eIds1 = userController.findEmployeesForService(er1)
+                                        .stream()
+                                        .map(EmployeeDTO::getId)
+                                        .collect(Collectors.toSet());
         Set<UUID> eIds1expected = Set.of(emp1n.getId(), emp2n.getId());
         Assertions.assertEquals(eIds1, eIds1expected);
 
@@ -163,10 +169,13 @@ class CritterFunctionalTest {
         er2.setDate(LocalDate.of(2019, 12, 27)); //friday
         er2.setSkills(Set.of(EmployeeSkill.WALKING, EmployeeSkill.SHAVING));
 
-        Set<UUID> eIds2 = userController.findEmployeesForService(er2).stream().map(EmployeeDTO::getId).collect(
-                Collectors.toSet());
+        Set<UUID> eIds2 = userController.findEmployeesForService(er2)
+                                        .stream()
+                                        .map(EmployeeDTO::getId)
+                                        .collect(
+                                                Collectors.toSet());
         Set<UUID> eIds2expected = Set.of(emp3n.getId());
-        Assertions.assertEquals(eIds2, eIds2expected);
+        Assertions.assertEquals(eIds2expected, eIds2);
     }
 
     @Test
@@ -182,10 +191,11 @@ class CritterFunctionalTest {
         LocalDate date = LocalDate.of(2019, 12, 25);
         List<UUID> petList = List.of(petDTO.getId());
         List<UUID> employeeList = List.of(employeeDTO.getId());
-        Set<EmployeeSkill> skillSet =  Set.of(EmployeeSkill.PETTING);
+        Set<EmployeeSkill> skillSet = Set.of(EmployeeSkill.PETTING);
 
         scheduleController.createSchedule(createScheduleDTO(petList, employeeList, date, skillSet));
-        ScheduleDTO scheduleDTO = scheduleController.getAllSchedules().get(0);
+        ScheduleDTO scheduleDTO = scheduleController.getAllSchedules()
+                                                    .get(0);
 
         Assertions.assertEquals(skillSet, scheduleDTO.getActivities());
         Assertions.assertEquals(scheduleDTO.getDate(), date);
@@ -213,29 +223,37 @@ class CritterFunctionalTest {
          */
 
         //Employee 1 in is both schedule 1 and 3
-        List<ScheduleDTO> scheds1e = scheduleController.getScheduleForEmployee(sched1.getEmployeeIds().get(0));
+        List<ScheduleDTO> scheds1e = scheduleController.getScheduleForEmployee(sched1.getEmployeeIds()
+                                                                                     .getFirst());
         compareSchedules(sched1, scheds1e.get(0));
         compareSchedules(sched3, scheds1e.get(1));
 
         //Employee 2 is only in schedule 2
-        List<ScheduleDTO> scheds2e = scheduleController.getScheduleForEmployee(sched2.getEmployeeIds().get(0));
+        List<ScheduleDTO> scheds2e = scheduleController.getScheduleForEmployee(sched2.getEmployeeIds()
+                                                                                     .get(0));
         compareSchedules(sched2, scheds2e.get(0));
 
         //Pet 1 is only in schedule 1
-        List<ScheduleDTO> scheds1p = scheduleController.getScheduleForPet(sched1.getPetIds().get(0));
+        List<ScheduleDTO> scheds1p = scheduleController.getScheduleForPet(sched1.getPetIds()
+                                                                                .get(0));
         compareSchedules(sched1, scheds1p.get(0));
 
         //Pet from schedule 2 is in both schedules 2 and 3
-        List<ScheduleDTO> scheds2p = scheduleController.getScheduleForPet(sched2.getPetIds().get(0));
+        List<ScheduleDTO> scheds2p = scheduleController.getScheduleForPet(sched2.getPetIds()
+                                                                                .get(0));
         compareSchedules(sched2, scheds2p.get(0));
         compareSchedules(sched3, scheds2p.get(1));
 
         //Owner of the first pet will only be in schedule 1
-        List<ScheduleDTO> scheds1c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched1.getPetIds().get(0)).getId());
+        List<ScheduleDTO> scheds1c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched1.getPetIds()
+                                                                                                                  .get(0))
+                                                                                             .getId());
         compareSchedules(sched1, scheds1c.get(0));
 
         //Owner of pet from schedule 2 will be in both schedules 2 and 3
-        List<ScheduleDTO> scheds2c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched2.getPetIds().get(0)).getId());
+        List<ScheduleDTO> scheds2c = scheduleController.getScheduleForCustomer(userController.getOwnerByPet(sched2.getPetIds()
+                                                                                                                  .get(0))
+                                                                                             .getId());
         compareSchedules(sched2, scheds2c.get(0));
         compareSchedules(sched3, scheds2c.get(1));
     }
@@ -247,6 +265,7 @@ class CritterFunctionalTest {
         employeeDTO.setSkills(Set.of(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
         return employeeDTO;
     }
+
     private static CustomerDTO createCustomerDTO() {
         CustomerDTO customerDTO = new CustomerDTO();
         customerDTO.setName("TestEmployee");
@@ -280,19 +299,23 @@ class CritterFunctionalTest {
 
     private ScheduleDTO populateSchedule(int numEmployees, int numPets, LocalDate date, Set<EmployeeSkill> activities) {
         List<UUID> employeeIds = IntStream.range(0, numEmployees)
-                .mapToObj(i -> createEmployeeDTO())
-                .map(e -> {
-                    e.setSkills(activities);
-                    e.setDaysAvailable(Set.of(date.getDayOfWeek()));
-                    return userController.saveEmployee(e).getId();
-                }).toList();
+                                          .mapToObj(i -> createEmployeeDTO())
+                                          .map(e -> {
+                                              e.setSkills(activities);
+                                              e.setDaysAvailable(Set.of(date.getDayOfWeek()));
+                                              return userController.saveEmployee(e)
+                                                                   .getId();
+                                          })
+                                          .toList();
         CustomerDTO cust = userController.saveCustomer(createCustomerDTO());
         List<UUID> petIds = IntStream.range(0, numPets)
-                .mapToObj(i -> createPetDTO())
-                .map(p -> {
-                    p.setOwnerId(cust.getId());
-                    return petController.savePet(p).getId();
-                }).toList();
+                                     .mapToObj(i -> createPetDTO())
+                                     .map(p -> {
+                                         p.setOwnerId(cust.getId());
+                                         return petController.savePet(p)
+                                                             .getId();
+                                     })
+                                     .toList();
         return scheduleController.createSchedule(createScheduleDTO(petIds, employeeIds, date, activities));
     }
 
